--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -92,8 +92,7 @@
         android:id="@+id/imageViewActor"
         android:layout_width="300dp"
         android:layout_height="250dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ackles"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
